--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,16 @@ form {
   flex-direction: column;
   gap: 10px;
 }
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1200;
+}
